// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "example/dist_sched/helloworld";


package message;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}


service MaxConsensus {
  rpc GetMax (EmptyRequest) returns (NumReply) {}
}

service RatioConsensus {
  rpc GetValue (EmptyRequest) returns (ValueReply) {}
}


message EmptyRequest {
}

message ValueReply {
  int32 it = 1;
  double p = 2; // p_lj
  double y = 3; // y_j
  double z = 4; // z_j
  double mm = 5; // M_j
  double m = 6; // m_j
}

message NumRequest {
  int64 num = 1;
  int32 it = 2;
}

message NumReply {
  int64 num = 1;
  int32 it = 2;
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string hostname = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
